# dtxm

./: .gitignore  streamlit_app.py  test.py
.claude/: settings.local.json
api/: server.py
brepmesh/: CMakeLists.txt
brepmesh/src/: brep_runtime_mesher.cpp  brep_runtime_mesher.h  mesh_brep.cpp  mesh_brep.h  module.cpp  read_3dm.cpp  read_3dm.h
src/: area.py  exposure.py  ollama_client.py  pipeline.py  planner.py  schema.py
